// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Text component decorated 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #262D33;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

<span
  className="c0"
  color="text"
  fontSize="medium"
  textDecoration="line-through"
>
  Hello
</span>
`;

exports[`A Text component resized 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 2.25rem;
  line-height: 2.75rem;
  color: #262D33;
}

<span
  className="c0"
  color="text"
  fontSize="xxxxlarge"
>
  Hello
</span>
`;

exports[`A Text component text transformed 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #262D33;
  text-transform: uppercase;
}

<span
  className="c0"
  color="text"
  fontSize="medium"
>
  Hello
</span>
`;

exports[`A Text component weight 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
  color: #262D33;
}

<span
  className="c0"
  color="text"
  fontSize="medium"
  fontWeight="bold"
>
  Hello
</span>
`;

exports[`A Text component with variant 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #262D33;
  color: #CC1F36;
}

<span
  className="c0"
  color="text"
  fontSize="medium"
>
  Hello
</span>
`;

exports[`A Text component wrapped 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #262D33;
  overflow-wrap: break-word;
}

<span
  className="c0"
  color="text"
  fontSize="medium"
>
  Hello
</span>
`;

exports[`A default Text component 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #262D33;
}

<span
  className="c0"
  color="text"
  fontSize="medium"
>
  Hello
</span>
`;
